[package]
name = "airac"
description = "Utilities to parse and calculate AIRAC cycles."
authors = ["Lily Hopkins <lily@hpkns.uk>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
